1、架构实验室- 事务和缓存测试

--- a/lab-parent/lab-01/pom.xml
+++ b/lab-parent/lab-01/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>data-structure</module>
+        <module>lab-02</module>
     </modules>
 
 
