--- a/lab-parent/lab-01/data-structure/ds-stack/pom.xml
+++ b/lab-parent/lab-01/data-structure/ds-stack/pom.xml
@@ -3,18 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>lab-01</artifactId>
+        <artifactId>data-structure</artifactId>
         <groupId>com.tsshare</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>data-structure</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>ds-queue</module>
-        <module>ds-stack</module>
-    </modules>
+    <artifactId>ds-stack</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.tsshare</groupId>
+            <artifactId>lab-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
