--- a/lab-parent/lab-03/bloom-filter/pom.xml
+++ b/lab-parent/lab-03/bloom-filter/pom.xml
@@ -3,20 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>lab-01</artifactId>
+        <artifactId>lab-03</artifactId>
         <groupId>com.tsshare</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>data-structure</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>ds-queue</module>
-        <module>ds-stack</module>
-        <module>ds-tree</module>
-        <module>ds-bitset</module>
-    </modules>
+    <artifactId>bloom-filter</artifactId>
 
 
 </project>
