--- a/lab-parent/lab-03/bloom-filter/pom.xml
+++ b/lab-parent/lab-03/bloom-filter/pom.xml
@@ -10,6 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>bloom-filter</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+        </dependency>
+    </dependencies>
 
 
 </project>
