--- a/lab-parent/lab-03/bloom-filter/pom.xml
+++ b/lab-parent/lab-03/bloom-filter/pom.xml
@@ -8,13 +8,20 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
 
     <artifactId>bloom-filter</artifactId>
+
     <dependencies>
         <dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.tsshare</groupId>-->
+<!--            <artifactId>ds-bitset</artifactId>-->
+<!--            <version>1.0-SNAPSHOT</version>-->
+<!--        </dependency>-->
     </dependencies>
 
 
