--- a/lab-parent/lab-03/pom.xml
+++ b/lab-parent/lab-03/pom.xml
@@ -15,5 +15,12 @@
         <module>bloom-filter</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.tsshare</groupId>
+            <artifactId>ds-bitset</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
