--- a/lab-parent/lab-02/src/main/resources/application.yml
+++ b/lab-parent/lab-02/src/main/resources/application.yml
@@ -1,29 +1,39 @@
 server:
-  port: 8084
+  port: 8081
 spring:
   application:
     name: lab02
 
   datasource:
     druid:
-      url: jdbc:mysql://10.10.96.142/asset_org?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&serverTimezone=GMT%2B8
+      url: jdbc:mysql://10.10.64.115/asset-org?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&serverTimezone=GMT%2B8
       username: root
-      password: 111111
+      password: purang
       driver-class-name: com.mysql.cj.jdbc.Driver
       initialSize: 5
       minIdle: 5
       maxActive: 50
-      #最大等待时间，配置获取连接等待超时，时间单位都是毫秒ms
       maxWait: 3000
-      #配置间隔多久才进行一次检测，检测需要关闭的空闲连接
       timeBetweenEvictionRunsMillis: 60000
-      #配置一个连接在池中最小生存的时间
       minEvictableIdleTimeMillis: 300000
       validationQuery: SELECT 1 FROM DUAL
       testWhileIdle: true
       testOnBorrow: false
       testOnReturn: false
       default-auto-commit: true
+  redis:
+    database: 0
+    host: 10.10.96.142
+    port: 6379
+    #    password:
+    timeout: 5000
+    #jedis 閰嶇疆
+    lettuce:
+      pool:
+        max-active: 20
+        max-wait: 10000
+        max-idle: 5
+        min-idle: 0
 
 mybatis-plus:
   type-aliases-package: com.tsshare.lab02.entity
