--- a/lab-parent/pom.xml
+++ b/lab-parent/pom.xml
@@ -49,6 +49,7 @@
         <module>lab-01</module>
         <module>lab-03</module>
         <module>bloomfiter</module>
+        <module>algo-tx</module>
     </modules>
 
 
