--- a/lab-parent/lab-02/data-algorithm/algo-tx/pom.xml
+++ b/lab-parent/lab-02/data-algorithm/algo-tx/pom.xml
@@ -3,20 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>lab-02</artifactId>
+        <artifactId>data-algorithm</artifactId>
         <groupId>com.tsshare</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>data-algorithm</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>algo-sort</module>
-        <module>algo-kmp</module>
-        <module>algo-bfs</module>
-        <module>algo-tx</module>
-    </modules>
+    <artifactId>algo-tx</artifactId>
 
 
 </project>
