--- a/lab-parent/pom.xml
+++ b/lab-parent/pom.xml
@@ -50,6 +50,8 @@
         <module>lab-03</module>
         <module>bloomfiter</module>
         <module>algo-tx</module>
+        <module>lab-04</module>
+        <module>lab-05</module>
     </modules>
 
 
