--- a/lab-parent/pom.xml
+++ b/lab-parent/pom.xml
@@ -47,10 +47,13 @@
 
     <modules>
         <module>lab-01</module>
+        <module>lab-02</module>
         <module>lab-03</module>
-        <module>bloomfiter</module>
-        <module>algo-tx</module>
+        <module>lab-04</module>
+        <module>lab-common</module>
         <module>lab-05</module>
+        <module>lab-06</module>
+        <module>lab-07</module>
     </modules>
 
 
