--- a/lab-parent/pom.xml
+++ b/lab-parent/pom.xml
@@ -54,6 +54,7 @@
         <module>lab-05</module>
         <module>lab-06</module>
         <module>lab-07</module>
+        <module>lab-08</module>
     </modules>
 
 
