--- a/lab-parent/pom.xml
+++ b/lab-parent/pom.xml
@@ -55,6 +55,7 @@
         <module>lab-06</module>
         <module>lab-07</module>
         <module>lab-08</module>
+        <module>lab-09</module>
     </modules>
 
 
