--- a/lab-parent/pom.xml
+++ b/lab-parent/pom.xml
@@ -56,6 +56,7 @@
         <module>lab-07</module>
         <module>lab-08</module>
         <module>lab-09</module>
+        <module>lab-10</module>
     </modules>
 
 
