--- a/lab-parent/pom.xml
+++ b/lab-parent/pom.xml
@@ -57,6 +57,7 @@
         <module>lab-08</module>
         <module>lab-09</module>
         <module>lab-10</module>
+        <module>lab-11</module>
     </modules>
 
 
