--- a/lab-parent/pom.xml
+++ b/lab-parent/pom.xml
@@ -58,6 +58,7 @@
         <module>lab-09</module>
         <module>lab-10</module>
         <module>lab-11</module>
+        <module>lab-13</module>
     </modules>
 
 
